[package]
name = "dictator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
cpal = { git = "https://github.com/0xfalafel/cpal.git" }
global-hotkey = "0.6.3"
hound = "3.5.1"
tokio = { version="1.41.1", features = ["full"]}
tokio-util = "0.7.15"
